# datalab-bi-platform-demo

./: .gitignore  Makefile  README.md  TODO.md  docker-compose.yml  walkthrough.md
backend/: .env.example  alembic.ini  pyproject.toml  test_agent.py  test_auto.py  test_dag.py  test_executor.py  test_executor2.py  test_executor3.py  test_sql.py  test_tracker.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  notebook_runtime.py
backend/app/agents/: __init__.py  auto_agent.py  base.py  chart_agent.py  chat_agent.py  chatbi_agent.py  cleaning_agent.py  context_builder.py  design_agent.py  eda_agent.py  insight_agent.py  proxy.py  python_agent.py  report_agent.py  sql_agent.py
backend/app/api/: __init__.py  agent_tasks.py  agents.py  cells.py  chat.py  datasources.py  enterprise.py  folders.py  knowledge.py  llm_logs.py  models.py  notebooks.py  websocket.py
backend/app/cell_agents/: __init__.py  runtime.py
backend/app/communication/: __init__.py  fsm.py  info_unit.py  protocol.py  shared_buffer.py
backend/app/context/: __init__.py  dag.py  retrieval.py  tracker.py
backend/app/enterprise/: __init__.py  audit.py  auth.py  resources.py
backend/app/execution/: __init__.py  cell_runtime.py  python_executor.py  sandbox.py  sql_executor.py
backend/app/knowledge/: __init__.py  dsl.py  generator.py  graph.py  profiler.py  retriever.py
backend/scripts/: test_ark_api.py
backend/tests/: conftest.py  test_agents_api.py  test_ai_edit.py  test_context_runtime.py  test_enterprise_api.py  test_executors.py  test_sql_consistency.py
(+87 files in other folders)
