[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datalab-backend"
version = "1.0.0"
description = "DataLab: Unified LLM-Powered BI Platform - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "litellm>=1.55.0",
    "chromadb>=0.5.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
